feat: ShowStyles API
